# faraday-tet

./: CMakeLists.txt  faraday.h  io.h  main.cpp  pc.cpp  pc.h  solve.cpp  solve.h  vis.cpp  vis.h
